# CloudCrew

./: .editorconfig  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Makefile  README.md  pyproject.toml
.claude/: AUTHORIZATION_RETROSPECTIVE.md  CRITICAL_FIXES_IMPLEMENTATION.md  FIX1_COMPLETION_SUMMARY.txt  FIX2_PHASE_SUMMARY_ANALYSIS.md  INDEX.md  M5_RETROSPECTIVE.md  NAVIGATION_GUIDE.md  README_RETROSPECTIVE.md  RETROSPECTIVE_SUMMARY.txt  SESSION_COMPLETION_SUMMARY.md
.claude/rules/: agents.md  dashboard.md  terraform.md  tests.md  tools.md
.github/: pull_request_template.md
.github/workflows/: deploy-gh-pages.yml  deploy-production.yml  quality.yml
dashboard/: .env.example  eslint.config.js  index.html  package-lock.json  package.json  vite.config.ts
dashboard/src/: App.tsx  index.css  main.tsx
docs/: FUTURE_IMPROVEMENTS.md
docs/architecture/: CloudCrew.drawio  README.md  agent-specifications.md  final-architecture.md  implementation-guide.md
docs/research/: 01-framework-comparison.md  02-strands-agents-deep-dive.md  03-memory-and-state.md  04-architecture-recommendation.md  05-prior-art-and-coordination-patterns.md  06-klaw-evaluation.md  README.md
infra/bootstrap/: main.tf  outputs.tf  variables.tf
infra/docker/: .dockerignore  Dockerfile
infra/terraform/: .checkov.yml  api_gateway.tf  backend.tf  bedrock.tf  budget.tf  cloudfront.tf  cognito.tf  cors.tf  dynamodb.tf  ecr.tf  ecs.tf  example.tfvars  iam.tf  lambda.tf  networking.tf  outputs.tf  providers.tf  s3.tf  step_functions.tf  variables.tf  websocket.tf
scripts/: run_lifecycle_test.py
src/: config.py
src/agents/: base.py  data.py  dev.py  infra.py  pm.py  qa.py  sa.py  security.py
src/hooks/: activity_hook.py  interrupt_hook.py  max_tokens_recovery_hook.py  memory_hook.py  resilience_hook.py
src/phases/: __main__.py  api_handlers.py  architecture.py  artifact_handlers.py  auth_utils.py  discovery.py  git_ops.py  handoff.py  middleware.py  pm_chat_handler.py  pm_review_handler.py  pm_review_message_handler.py  poc.py  production.py  review_utils.py  runner.py  sfn_handlers.py  task_handlers.py  ws_handlers.py
src/state/: activity.py  approval.py  broadcast.py  chat.py  interrupt_response_cache.py  interrupts.py  ledger.py  memory.py  models.py  secrets.py  tasks.py
src/templates/: __init__.py  adr.md  architecture_doc.md  project_plan.md  security_review.md
src/tools/: _tf_backend.py  activity_tools.py  adr_writer.py  aws_auth_tools.py  board_tools.py  deploy_tools.py  git_auth_tools.py  git_tools.py  interrupt_tools.py  kb_search.py  ledger_tools.py  phase_summary_tools.py  security_review.py  security_tools.py  sow_generator.py  sow_parser.py  sow_presenter.py  terraform_tools.py  web_search.py
tests/: conftest.py
tests/architecture/: test_boundaries.py
tests/integration/: test_discovery_swarm.py  (+1 more)
(+143 files in other folders)
